# meiga

./: .flake8  .gitignore  .pre-commit-config.yaml  .travis.yml  404.html  LICENSE  MANIFEST.in  README.md  conftest.py  index.html  lume.yml  mkdocs.yml  pyproject.toml  pytest.coverage.ini  pytest.ini  setup.py  sitemap.xml  update_version.py
.github/: SECURITY.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature-request.yml
.github/workflows/: ci.yml  coverage.yml  docs.yml  pypi.yml  pythonpackage.yml
benchmark/: pyperf_comparative.py  time_result.py
changelog/: index.html
contributing/: index.html
docs/: changelog.md  contributing.md  getting_started.md  index.md  install.md
docs/usage/: alias.md  assertions.md  decorator.md  decorators.md  detail.md  getting_started.md  result.md  result_type.md
getting_started/: index.html
install/: index.html
js/: termynal.js
meiga/: VERSION  __init__.py  alias.py  deprecation.py  derived_actions.py  error.py  failures.py  handlers.py  misc.py  no_given_value.py  on_failure_exception.py  public_api.py  py.typed  result.py  return_error_on_failure.py
meiga/assertions/: __init__.py  assert_failure.py  assert_success.py
meiga/decorators/: __init__.py  async_decoration_error.py  async_early_return.py  early_return.py  logging_decorator.py  meiga_decorator.py  to_result.py  unexpected_decoration_order_error.py
requirements/: dev-requirements.txt  dev.txt  docs-requirements.txt  requirements.txt
search/: search_index.json
tests/: conftest.py
tests/property/: test_property.py
tests/unit/: test_alias.py  test_async_early_return.py  test_deprecation.py  test_early_return.py  test_error.py  test_meiga_decorator.py  test_on_failure_exception.py  test_result.py  test_result_assertions.py  test_result_attributes_of_object_type.py  test_result_bind.py  test_result_handle.py  test_result_legacy_handle.py  test_result_legacy_unwrap.py  test_result_logging.py  test_result_map.py  test_result_match.py  test_result_on_functions.py  test_result_recast.py  test_result_throw.py  test_result_transform.py  test_result_unwrap.py  test_to_result_decorator.py  test_waiting_for_early_return.py
tests/unit/doc/: example_with_meiga.py  example_without_meiga.py  test_example_with_meiga.py  test_example_without_meiga.py
tests/unit/legacy/: test_meiga_decorator.py
usage/alias/: index.html
usage/assertions/: index.html
usage/decorators/: index.html
usage/result/: index.html
