[build-system]
build-backend = "hatchling.build"
requires = [
  "hatchling",
]

[project]
name = "meiga"
description = "A simple, typed and monad-based Result type for Python"
readme = "README.md"
keywords = [
  "Monad",
  "Result",
  "result-type",
  "Typed",
  "Typing",
]
license = "MIT"
authors = [
    { name = "Alice Biometrics", email = "support@alicebiometrics.com" },
]
requires-python = '>=3.7'
classifiers = [
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development",
    "Typing :: Typed",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dynamic = [
  "version",
]
dependencies = [
  'typing-extensions; python_version < "3.10"',
]
[project.optional-dependencies]
dev = [
  "black==23.1",
  "hypothesis<7.0.0,>=6.56.3",
  "isort[colors]<6.0.0,>=5.10.1",
  "mypy>=1.0.0",
  "pip-audit<3.0.0,>=2.4.14",
  "pre-commit<3.0.0,>=2.20",
  "pyproject-fmt>=0.9.1",
  "pytest<8.0.0,>=7.1.3",
  "pytest-clarity<2.0.0,>=1.0.1",
  "pytest-cov<5.0.0,>=4",
  "pytest-env<1.0.0,>=0.8.1",
  "pytest-mock<4.0.0,>=3.10",
  "pytest-variables[yaml]<3.0.0,>=2",
  "pyupgrade>=3.2",
  "ruff>=0.0.239",
]
doc = [
  "ansi2html",
  "markdown-include",
  "mdx-include<2.0.0,>=1.4.1",
  "mdx-truly-sane-lists",
  "mkdocs<2.0.0,>=1.1.2",
  "mkdocs-exclude",
  "mkdocs-markdownextradata-plugin<0.3.0,>=0.1.7",
  "mkdocs-material<9.0.0,>=8.1.4",
  "mkdocstrings",
]
[project.urls]
Documentation = "https://alice-biometrics.github.io/meiga/"
Homepage = "https://github.com/alice-biometrics/meiga"

[tool.hatch.version]
path = "meiga/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/meiga",
]

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
markers=["unit", "property"]
addopts=["tests",
        "-v",
        "--color=yes",
        "--durations=10"
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning"
]
python_files=["test_*.py"]
python_classes=["Test*"]
python_functions=["test_*", "should_*"]
norecursedirs = [
    "output",
    ".mypy_cache",
    ".github",
    ".hypothesis",
    "meiga",
    "samples",
    "*.egg-info",
    "dist",
    ".git"
]

[tool.ruff]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"meiga/__init__.py" = ["F403"]
"tests/unit/test_result_match.py" = ["E999"]
